# PocketDex

./: .gitignore  gui.py  main.py  pyproject.toml  readme.md  requirement.txt  requirements.txt
.github/: python-tests.yml
docs/: build_your_own_cli.md  data_flow.md  setup.md
src/: cli_display.py  command.py  compare.py  display_formatter.py  history_handler.py  main.py  parser.py  poke_api.py
src/gui/: gui.py
src/history/: search_history.txt
src/pocket_dex/: cli_display.py  command.py  compare.py  display_formatter.py  history_handler.py  main.py  parser.py  poke_api.py
src/pocket_dex/history/: search_history.txt
src/pocket_dex/styles/: layout.tcss
src/styles/: layout.tcss
tests/: test_command.py  test_compare.py  test_parser.py  test_poke_api.py
