[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-dex"
version = "1.0.0"
description = "A CLI Pokédex built with Python"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "rich",
    "textual",
]

[project.scripts]
pocket-dex = "pocket_dex.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]